# greatwheel

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  greatwheel-explorer.html
agents/: agents.toml  triage.py
bench/browsecomp/: DESIGN-claim-attribution-assembly.md  DESIGN-colbert-experiments.md  DESIGN-entity-aboutness-rerank.md  EXPERIMENTS.md  blob_doc_iter.py  blob_reranker.py  bm25s_searcher.py  build_colbert_index.py  build_colbert_passage_index.py  build_elasticsearch_index.py  build_lancedb_mv_index.py  build_passage_blob_store.py  build_qdrant_index.py  build_usearch_index.py  build_voyager_index.py  classify_failures.py  colbert_encode.py  colbert_reranker.py  colbert_server.py  entity_search.py  fact_registry.py  gepa_evaluator.py  lancedb_searcher.py  ollama_client.py  pyproject.toml  quick_eval.py  rerank_server.py  rerank_server_blobs.py  results.tsv  retrieval_benchmark.py  retrieval_benchmark_v2.py  retrieval_diagnostic.py  run.sh  run_gepa.py  run_per_query.sh  sample30.tsv  search_server.py  search_server_qdrant.py  test_colbert_passage.py  text_utils.py  (+1 more)
bench/browsecomp/configs/: baseline.toml  coverage-per1.toml  coverage-per3.toml  gepa_best_v1.txt  gepa_v3.toml  narrow-q3.toml  presearch-q7.toml  prf-light.toml  prf-strong.toml  s5_filter.toml  s5_lite.toml  s5_refine.toml  snippet500.toml  with_prompt.toml
bench/browsecomp/gepa_runs/gpt5_3x_subset8/: best_prompt.txt  candidate_tree.html  candidates.json  result.json  run_log.json  run_log.txt  run_log_stderr.txt
bench/browsecomp/gepa_runs/gpt5_3x_subset8/generated_best_outputs_valset/task_0/: iter_0_prog_0.json
bench/browsecomp/gepa_runs/gpt5_3x_subset8_v2/: best_prompt.txt  candidate_tree.html  candidates.json  result.json  run_log.json  run_log.txt  run_log_stderr.txt
bench/browsecomp/gepa_runs/gpt5_3x_subset8_v2/generated_best_outputs_valset/task_0/: iter_0_prog_0.json
bench/browsecomp/gepa_runs/gpt5_enriched/: result.json  run_log.json  run_log.txt  run_log_stderr.txt
bench/browsecomp/gepa_runs/gpt5_enriched/generated_best_outputs_valset/task_0/: iter_0_prog_0.json
bench/browsecomp/gepa_runs/gpt5_full30/: best_prompt.txt  candidates.json  result.json  run_log.json  run_log.txt  run_log_stderr.txt
bench/browsecomp/gepa_runs/gpt5_full30/generated_best_outputs_valset/task_0/: iter_0_prog_0.json
bench/browsecomp/searchers/: __init__.py  base.py  blob_rerank_wrapper.py  brute_force_searcher.py  elasticsearch_searcher.py  lancedb_mv_searcher.py  qdrant_searcher.py
bench/conv-loop/: Cargo.toml  results.tsv
bench/conv-loop/scenarios/: s01_variable_persistence.toml  s02_definition_persistence.toml  s03_context_recency.toml  s04_compaction.toml  s05_branch_restore.toml  s06_steering.toml  s07_follow_up.toml  s09_session_resume.toml  s10_tree_integrity.toml
bench/conv-loop/scenarios/live/: l01_variable_persistence.toml  l02_function_persistence.toml  l03_multi_turn_computation.toml  l04_instruction_retention.toml  l05_data_pipeline.toml  l06_iterative_refinement.toml  l07_long_range_reference.toml  l08_complex_structures.toml  l09_error_recovery.toml  l10_conditional_accumulation.toml  l11_string_processing.toml  l12_dict_aggregation.toml  l13_fibonacci.toml  l14_matrix_ops.toml  l15_stateful_counter.toml  l16_recursive_data.toml  l17_set_operations.toml  l18_compaction_recovery.toml  l19_branch_switch.toml  l20_session_resume.toml  l21_context_window.toml  l22_steering_injection.toml  l23_follow_up.toml  l24_tree_integrity.toml  l25_compact_then_branch.toml  l26_long_conversation.toml  l27_multi_iteration.toml  l28_resume_after_compact.toml  l29_self_correction.toml  l30_integration_stress.toml
bench/conv-loop/src/: assertions.rs  live_runner.rs  main.rs  mock.rs  reporter.rs  runner.rs  scenario.rs
bench/conv-loop/src/adapters/: mint.rs  mod.rs  tau_bench.rs
config/: greatwheel.toml
crates/gw-bench/: Cargo.toml
crates/gw-bench/src/: conv_loop_runner.rs  main.rs
crates/gw-core/: Cargo.toml
crates/gw-core/src/: agent_bus.rs  channel.rs  lib.rs  loop_event.rs  plugin.rs  session_tree.rs  temporal.rs  ui.rs
crates/gw-engine/: Cargo.toml
crates/gw-engine/src/: dispatcher.rs  engine.rs  host_fn_router.rs  lib.rs  registry.rs
crates/gw-engine/src/builtins/: hindsight_opinions.rs  hindsight_recall.rs  hindsight_retain.rs  mod.rs
crates/gw-kb/: Cargo.toml  build.rs  setup.sh
crates/gw-kb/python/: pyproject.toml
crates/gw-kb/python/gw_kb_extract/: __init__.py  embed.py  html.py  markdown.py  pdf.py
crates/gw-kb/src/: chunk.rs  classify.rs  clean.rs  digest.rs  embed.rs  entities.rs  error.rs  extract.rs  feeds.rs  index.rs  ingest.rs  lib.rs  linking.rs  llm_parse.rs  merge.rs  organize.rs  plugin.rs  search.rs  server.rs  source.rs  synthesize.rs  topics.rs
crates/gw-kb/tests/: agent_integration.rs
crates/gw-loop/: Cargo.toml
crates/gw-loop/src/: bridge.rs  context.rs  conversation.rs  error.rs  lib.rs  llm.rs  pg_store.rs  session.rs  tree.rs
crates/gw-loop/src/spine/: extract.rs  mod.rs  persist.rs  query.rs  resegment.rs  segment.rs  types.rs
crates/gw-loop/tests/: conversation_test.rs  spine_pipeline.rs
crates/gw-memory/: Cargo.toml
crates/gw-memory/examples/: blob_rerank.rs  colbert_search.rs  encode_query.rs
crates/gw-memory/src/: colbert_blobs.rs  corpus.rs  error.rs  fusion.rs  graph.rs  hybrid.rs  lance.rs  lib.rs  postgres.rs  tantivy_store.rs  temporal.rs
crates/gw-memory/src/colbert/: candle_encoder.rs  mod.rs  usearch_retriever.rs
crates/gw-server/: Cargo.toml
crates/gw-server/src/: chat.html  main.rs  session_api.rs  ws_handler.rs
crates/gw-trace/: Cargo.toml
crates/gw-trace/src/: lib.rs  postgres_layer.rs
crates/gw-ui/: Cargo.toml
crates/gw-ui/examples/: data_explorer.rs  echo_server.rs  frankenstein_server.rs  literature_assistant.rs  llm_server.rs
crates/gw-ui/examples/data/: bookshop_seed.sql  frankenstein.json
crates/gw-ui/src/: lib.rs  mcp_ui.rs  plugin.rs  surface.rs
crates/gw-ui/src/ag_ui/: adapter.rs  codec.rs  events.rs  mod.rs  state.rs
crates/gw-ui/tests/: http_integration.rs
(+85 files in other folders)
