[workspace]
resolver = "2"
members = [
    "crates/gw-core",
    "crates/gw-runtime",
    "crates/gw-llm",
    "crates/gw-memory",
    "crates/gw-bus",
    "crates/gw-channels",
    "crates/gw-scheduler",
    "crates/gw-trace",
    "crates/gw-server",
    "crates/gw-bench",
    "crates/gw-loop",
    "bench/conv-loop",
]

[workspace.dependencies]
# Internal crates
gw-core = { path = "crates/gw-core" }
gw-runtime = { path = "crates/gw-runtime" }
gw-llm = { path = "crates/gw-llm" }
gw-memory = { path = "crates/gw-memory" }
gw-bus = { path = "crates/gw-bus" }
gw-channels = { path = "crates/gw-channels" }
gw-scheduler = { path = "crates/gw-scheduler" }
gw-trace = { path = "crates/gw-trace" }
gw-server = { path = "crates/gw-server" }
gw-loop = { path = "crates/gw-loop" }

# External dependencies
arrow-array = "57"
arrow-schema = "57"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
lancedb = "0.26"
notify = "6"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
ouros = { git = "https://github.com/parcadei/ouros", version = "0.0.4" }
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "2"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
tantivy = "0.25"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
