[workspace]
resolver = "2"
members = [
    "crates/gw-core",
    "crates/gw-runtime",
    "crates/gw-llm",
    "crates/gw-memory",
    "crates/gw-engine",
    "crates/gw-trace",
    "crates/gw-server",
    "crates/gw-bench",
    "crates/gw-loop",
    "crates/gw-kb",
    "crates/gw-ui",
    "bench/conv-loop",
]

[workspace.dependencies]
# Internal crates
gw-core = { path = "crates/gw-core" }
gw-runtime = { path = "crates/gw-runtime" }
gw-llm = { path = "crates/gw-llm" }
gw-memory = { path = "crates/gw-memory" }
gw-engine = { path = "crates/gw-engine" }
gw-trace = { path = "crates/gw-trace" }
gw-server = { path = "crates/gw-server" }
gw-loop = { path = "crates/gw-loop" }
gw-kb = { path = "crates/gw-kb" }
gw-ui = { path = "crates/gw-ui" }

# External dependencies
arrow-array = "57"
arrow-schema = "57"
half = "2"
ndarray = "0.16"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"] }
usearch = { version = "2", default-features = false, features = ["fp16lib"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
feed-rs = "2"
lancedb = "0.26"
notify = "6"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
pyo3 = { version = "0.22", features = ["auto-initialize", "chrono"] }
pulldown-cmark = "0.12"
sha2 = "0.10"
url = "2"
ouros = { git = "https://github.com/parcadei/ouros", version = "0.0.4" }
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "2"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
tantivy = "0.25"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]
unused_imports = "deny"
unused_variables = "deny"
dead_code = "deny"

[workspace.lints.clippy]
redundant_closure = "warn"
manual_split_once = "warn"
needless_pass_by_value = "warn"
large_enum_variant = "warn"
let_unit_value = "warn"
