[package]
name = "conv-loop-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "conv-loop-bench"
path = "src/main.rs"

[dependencies]
gw-core = { workspace = true }
gw-runtime = { workspace = true }
gw-llm = { workspace = true }
gw-loop = { workspace = true }
ouros = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
