[package]
name = "gw-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gw-bench"
path = "src/main.rs"

[dependencies]
gw-core = { workspace = true }
gw-llm = { workspace = true }
gw-runtime = { workspace = true }
ouros = { workspace = true }

clap = { workspace = true, features = ["env"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
