[package]
name = "gw-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
gw-core = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
