[package]
name = "gw-loop"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
gw-core = { workspace = true }
gw-engine = { workspace = true }
gw-kb = { workspace = true }
gw-llm = { workspace = true }
gw-runtime = { workspace = true }
ouros = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
