[package]
name = "gw-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
gw-core = { workspace = true, features = ["sqlx"] }
gw-llm = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
lancedb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tantivy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
