[package]
name = "gw-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "greatwheel"
path = "src/main.rs"

[dependencies]
gw-core = { workspace = true }
gw-engine = { workspace = true }
gw-runtime = { workspace = true }
gw-llm = { workspace = true }
gw-memory = { workspace = true }
gw-loop = { workspace = true }
uuid = { workspace = true }
gw-scheduler = { workspace = true }
gw-trace = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
