[package]
name = "gw-ui"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
gw-core = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
gw-engine = { workspace = true }
gw-llm = { workspace = true }
gw-loop = { workspace = true }
gw-runtime = { workspace = true }
ouros = { workspace = true }
reqwest = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"

[[example]]
name = "llm_server"
path = "examples/llm_server.rs"
