[package]
name = "gw-ui"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
gw-core = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
dotenvy = "0.15"
gw-engine = { workspace = true }
gw-kb = { workspace = true }
gw-llm = { workspace = true }
gw-loop = { workspace = true }
gw-runtime = { workspace = true }
ouros = { workspace = true }
reqwest = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"

[[example]]
name = "llm_server"
path = "examples/llm_server.rs"

[[example]]
name = "frankenstein_server"
path = "examples/frankenstein_server.rs"

[[example]]
name = "data_explorer"
path = "examples/data_explorer.rs"

[[example]]
name = "literature_assistant"
path = "examples/literature_assistant.rs"
